service-desk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-desk-service
spec:
  type: NodePort
  selector:
    app: service-desk
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31050
