service-desk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-desk-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.service-desk.40.82.176.176.nip.io
        - api.service-desk.40.82.176.176.nip.io
      secretName: service-desk-tls-secret
  rules:
    # 1. Rota do Frontend (Acessado pelo navegador)
    - host: app.service-desk.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-desk-frontend-svc
                port:
                  number: 80

    # 2. Rota do Backend (Consumida pelo Frontend)
    - host: api.service-desk.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-desk-backend-svc
                port:
                  number: 8000
